# smb-decomp

./: .clang-format  .gitignore  BUILDING.md  Makefile  README.md  SMASH BROTHERS-NALE.txt  assets.toml  assets.yaml  dodo.py  extract_assets.py  main.s  ssb64.u.sha1  ssb64.us.sha1
docs/: braindump.md  ssb_fighter_animations.txt
doit/: config.py  parsemk.py  toolchain-old.py  toolchain.py
doutils/: toolchain.py
game/: Tupfile  Tuprules.tup  not-found-sym.ld  spec.dhall  ssb64.in.ld
game/asm/: Tupdefault  Tupfile  header.s
game/asm/boot/: boot.s
game/asm/loadovl/: loadovl.bss.s  loadovl.data.s  loadovl.s  loadovl.text.s  loadovl.unresolved.ld  overlayloader.bss.s  overlayloader.data.s  overlayloader.extern.ld  overlayloader.unresolved.ld
game/asm/ovl0/: halsprite.s  ovl0.bss.s  ovl0.data.s  ovl0.extern.ld  ovl0.text.s  ovl0_0.s  ovl0_1.s  ovl0_2.s  ovl0_3.s  ovl0_4.s  reloc_data_mgr.s
game/asm/ovl1/: ovl1.extern.ld  ovl1.text.s  ovl1.unresolved.ld
game/asm/ovl10/: ovl10.data.s  ovl10.extern.ld  ovl10.text.s
game/asm/ovl11/: ovl11.data.s  ovl11.text.s
game/asm/ovl12/: ovl12.data.s  ovl12.extern.ld  ovl12.text.s
game/asm/ovl13/: ovl13.data.s  ovl13.extern.ld  ovl13.text.s
game/asm/ovl14/: ovl14.data.s  ovl14.extern.ld  ovl14.text.s
game/asm/ovl15/: ovl15.data.s  ovl15.text.s
game/asm/ovl16/: ovl16.data.s  ovl16.text.s
game/asm/ovl17/: ovl17.data.s  ovl17.text.s
game/asm/ovl18/: ovl18.data.s  ovl18.text.s
game/audio/: Tupfile
game/configs/: jp.config  us.config
game/include/: macros.h  missing_libultra.h  ssb64_types.h  ssb_types.h  string.h
game/resources/: Tupfile  ideas.md
game/sprites/: Tupdefault  Tupfile  Tuprules.tup
game/unknown/: Tupfile
tools/: .gitignore  Makefile  n64gfx
tools/asm-processor/: .gitrepo
tools/ido-recomp/: libc_impl.c  recomp.cpp
tools/rust/: Cargo.toml
tools/rust/extract/: Cargo.toml
tools/rust/extract/src/: clean.rs  config.rs  extract.rs  ignore.rs  list.rs  local.rs  main.rs
tools/rust/extract/src/extract/: resources.rs  sprites.rs
tools/rust/imgbank/: Cargo.toml
tools/rust/imgbank/src/: format.rs  link.rs  main.rs  pack.rs  unpack.rs
tools/rust/libsprite/: Cargo.toml
tools/rust/libsprite/src/: lib.rs
tools/rust/resources/: Cargo.toml
tools/rust/resources/src/: lib.rs  main.rs  table.rs
utils/: build-posix64-toolchain.sh  convert_bss.py  diff_settings.py  doit_config.py  doit_toolchain.py  extract_assets.py  m2ctx.py  progress.py  split_asm.py
(+1541 files in other folders)
