[package]
name = "extract"
version = "0.1.0"
authors = ["SSB64d team <unknown>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = {version = "0.3.14", default-features = false}
anyhow = "1.0.31"
serde = {version = "1.0.111", features = ["derive"]}
toml = "0.5.6"
libsprite = {path = "../libsprite"}
libgfx = {path = "../libgfx", features = ["png"]}