[package]
name = "imgbank"
version = "0.1.0"
authors = ["SSB64d team <unknown>"]
edition = "2018"

[dependencies]
structopt = {version = "0.2.15", default-features = false}
failure = "0.1.5" 
byteorder = "1.3.1" 
lodepng = "2.4.2"
libgfx = {path = "../libgfx"}
toml = "0.5.1" 
serde = {version = "1.0.91", features = ["derive"] }
