[package]
name = "imgbank"
version = "0.1.0"
authors = ["SSB64d team <unknown>"]
edition = "2018"

[dependencies]
structopt = {version = "0.3.12", default-features = false}
anyhow = "1.0.27"
byteorder = "1.3.4" 
lodepng = "2.5.0"
libgfx = {path = "../libgfx"}
toml = "0.5.6" 
serde = {version = "1.0.105", features = ["derive"] }
