[package]
name = "libsprite"
version = "0.1.0"
authors = ["SSB64d team <unknown>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libgfx = {path = "../libgfx"}
byteorder = "1.3.4"
serde = {version = "1.0.111", features = ["derive"]}
